# UnixAgent

./: .gitignore  README.md  config.py  main.py  operation.py  pyproject.toml  secrets.yaml  settings.yaml
agentGroup/: __init__.py  agentGroup.py  mcp_executor.py  memory.py
privilege/: __init__.py  approval.py  external_tool.py  hire.py  operations.py  privilege.py
